--- a/src/index.css
+++ b/src/index.css
@@ -228,3 +228,18 @@ input:focus {
     width: 80%;
   }
 }
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.loading {
+  width: 6rem;
+  height: 6rem;
+  border: 5px solid #cccccc;
+  border-radius: 50%;
+  border-top-color: #5518ab;
+  animation: spinner 0.6s linear infinite;
+  margin: 0 auto;
+}
